--- a/AviationMeteorology/Views/Base.lproj/Main.storyboard
+++ b/AviationMeteorology/Views/Base.lproj/Main.storyboard
@@ -56,7 +56,7 @@
                             </view>
                             <searchBar contentMode="redraw" placeholder="Enter ICAO Code" translatesAutoresizingMaskIntoConstraints="NO" id="qUq-pI-zqx">
                                 <rect key="frame" x="16" y="59" width="343" height="56"/>
-                                <textInputTraits key="textInputTraits"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="allCharacters" returnKeyType="search"/>
                                 <connections>
                                     <outlet property="delegate" destination="BYZ-38-t0r" id="z84-FN-nYR"/>
                                 </connections>
@@ -109,7 +109,7 @@
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                 <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <state key="normal" title="Decode">
+                                <state key="normal" title="Decoded">
                                     <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 </state>
                                 <variation key="default">
@@ -1159,7 +1159,9 @@
                             </mask>
                         </variation>
                     </view>
-                    <navigationItem key="navigationItem" id="zYM-Df-8Pw"/>
+                    <navigationItem key="navigationItem" id="zYM-Df-8Pw">
+                        <barButtonItem key="rightBarButtonItem" title="Item" id="eAX-hp-f6W"/>
+                    </navigationItem>
                     <connections>
                         <outlet property="barometerLabel" destination="amH-rU-Ix8" id="1EY-6D-yup"/>
                         <outlet property="ceilingLabel" destination="Nig-8u-yhP" id="rbr-ha-4k9"/>
@@ -1167,6 +1169,7 @@
                         <outlet property="conditionLabel" destination="NYO-KB-G8F" id="V5V-Eh-IVJ"/>
                         <outlet property="coordinatesLabel" destination="lfF-aw-x4u" id="GaQ-UV-znL"/>
                         <outlet property="dewPointLabel" destination="5Ul-qg-WaQ" id="rwi-Rg-rfv"/>
+                        <outlet property="elevationLabel" destination="eAX-hp-f6W" id="gsc-Nv-2bC"/>
                         <outlet property="flightRuleLabel" destination="QDf-Bd-kms" id="Dhb-oW-cFn"/>
                         <outlet property="nameLabel" destination="kdC-9O-SZm" id="g6g-dF-Rfb"/>
                         <outlet property="thermometerLabel" destination="QK6-Kh-NNo" id="baO-bf-oNv"/>
@@ -1177,7 +1180,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="mrd-cQ-hNw" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="6199" y="621"/>
+            <point key="canvasLocation" x="6197.6000000000004" y="620.23988005997012"/>
         </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="e9q-TD-mzd">
@@ -1191,7 +1194,7 @@
                     </tabBar>
                     <connections>
                         <segue destination="web-Xb-IaM" kind="relationship" relationship="viewControllers" id="ZhM-RG-QMS"/>
-                        <segue destination="ICi-Zq-V9c" kind="relationship" relationship="viewControllers" id="mV9-bD-5sL"/>
+                        <segue destination="XUI-X3-sLX" kind="relationship" relationship="viewControllers" id="h4B-Gw-d8Y"/>
                         <segue destination="k9c-FW-9wI" kind="relationship" relationship="viewControllers" id="Hzz-bB-l9d"/>
                         <segue destination="guA-XS-Seu" kind="relationship" relationship="viewControllers" id="tTs-Gd-N11"/>
                         <segue destination="R1g-mB-xQo" kind="relationship" relationship="viewControllers" id="M8o-Vy-Tqh"/>
@@ -1243,36 +1246,66 @@
             </objects>
             <point key="canvasLocation" x="2100" y="716"/>
         </scene>
-        <!--Location-->
-        <scene sceneID="yho-Lt-OiP">
+        <!--Near-->
+        <scene sceneID="bO2-Pn-5Hk">
             <objects>
-                <tableViewController id="ICi-Zq-V9c" sceneMemberID="viewController">
-                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="BWz-UZ-qgl">
+                <viewController id="XUI-X3-sLX" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="ar3-qC-OM5">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="Rny-7J-b1W">
+                                <rect key="frame" x="0.0" y="216.5" width="375" height="401.5"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" rowHeight="200" id="5pn-eJ-FWn">
+                                        <rect key="frame" x="0.0" y="28" width="375" height="200"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="5pn-eJ-FWn" id="2ta-2g-9oY">
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="200"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </prototypes>
+                            </tableView>
+                            <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="fu9-2J-uPe">
+                                <rect key="frame" x="0.0" y="20" width="375" height="194"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <subviews>
+                                    <slider opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="10" minValue="10" maxValue="250" translatesAutoresizingMaskIntoConstraints="NO" id="vOt-Yd-oTG">
+                                        <rect key="frame" x="128" y="21" width="118" height="30"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                    </slider>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="shx-tl-UBp">
+                                        <rect key="frame" x="166" y="58" width="42" height="21"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="mcD-7z-rjK">
+                                        <rect key="frame" x="164" y="112" width="46" height="30"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <state key="normal" title="Button"/>
+                                    </button>
+                                </subviews>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                            </view>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="bG9-dx-31D"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                        <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" id="ovK-qP-Elc">
-                                <rect key="frame" x="0.0" y="28" width="375" height="43.5"/>
-                                <autoresizingMask key="autoresizingMask"/>
-                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="ovK-qP-Elc" id="9Ib-ei-RJv">
-                                    <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
-                                    <autoresizingMask key="autoresizingMask"/>
-                                </tableViewCellContentView>
-                            </tableViewCell>
-                        </prototypes>
-                        <connections>
-                            <outlet property="dataSource" destination="ICi-Zq-V9c" id="zrG-zs-aFH"/>
-                            <outlet property="delegate" destination="ICi-Zq-V9c" id="U4U-jU-MHM"/>
-                        </connections>
-                    </tableView>
-                    <tabBarItem key="tabBarItem" title="Location" image="location.circle" catalog="system" id="oPe-fv-A9c">
-                        <color key="badgeColor" white="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                    </tabBarItem>
-                </tableViewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="geW-5d-EW1" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+                        <constraints>
+                            <constraint firstItem="Rny-7J-b1W" firstAttribute="bottom" secondItem="bG9-dx-31D" secondAttribute="bottom" id="IED-zC-1w2"/>
+                            <constraint firstItem="Rny-7J-b1W" firstAttribute="leading" secondItem="bG9-dx-31D" secondAttribute="leading" id="Qhq-bV-BWg"/>
+                            <constraint firstItem="Rny-7J-b1W" firstAttribute="trailing" secondItem="bG9-dx-31D" secondAttribute="trailing" id="rYT-cv-Ilr"/>
+                            <constraint firstItem="Rny-7J-b1W" firstAttribute="height" secondItem="bG9-dx-31D" secondAttribute="height" multiplier="0.65" id="xDX-8p-gSh"/>
+                        </constraints>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="Near" image="location" catalog="system" id="ZCP-me-Kmh"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="rYg-Y0-IpR" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2100" y="1820"/>
+            <point key="canvasLocation" x="1298.4000000000001" y="1763.568215892054"/>
         </scene>
         <!--View Controller-->
         <scene sceneID="4zW-VS-vzB">
@@ -1351,6 +1384,7 @@
         <image name="gearshape" catalog="system" width="128" height="121"/>
         <image name="house" catalog="system" width="128" height="106"/>
         <image name="info.circle" catalog="system" width="128" height="121"/>
+        <image name="location" catalog="system" width="128" height="121"/>
         <image name="location.circle" catalog="system" width="128" height="121"/>
         <image name="map" catalog="system" width="128" height="110"/>
         <image name="square" catalog="system" width="128" height="114"/>
