--- a/AviationMeteorology/Views/Base.lproj/Main.storyboard
+++ b/AviationMeteorology/Views/Base.lproj/Main.storyboard
@@ -201,6 +201,7 @@
                     <connections>
                         <outlet property="airportSearchPort" destination="qUq-pI-zqx" id="fNS-iN-tGM"/>
                         <outlet property="decodedButton" destination="WzW-0P-mIl" id="2Qd-E9-xNt"/>
+                        <outlet property="loadingIndicator" destination="L6E-RA-T9i" id="BJo-9R-cJ2"/>
                         <outlet property="metarResultLable" destination="h3a-IS-qE9" id="MOs-t5-aMX"/>
                         <outlet property="tafResultLabel" destination="Hcc-fU-QRW" id="B5f-fr-Aio"/>
                     </connections>
@@ -1839,25 +1840,32 @@
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="mkA-rU-lmt">
                                 <rect key="frame" x="0.0" y="44" width="375" height="287"/>
                                 <subviews>
-                                    <searchBar contentMode="redraw" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="ewn-WB-dja">
-                                        <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
-                                        <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                                    <searchBar contentMode="redraw" translatesAutoresizingMaskIntoConstraints="NO" id="ewn-WB-dja">
+                                        <rect key="frame" x="0.0" y="0.0" width="375" height="56"/>
                                         <textInputTraits key="textInputTraits" textContentType="name"/>
                                         <connections>
                                             <outlet property="delegate" destination="lbI-YC-dSZ" id="g66-qs-IlZ"/>
                                         </connections>
                                     </searchBar>
-                                    <view contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="2XI-Fc-C1W" customClass="RouteViewController">
-                                        <rect key="frame" x="0.0" y="44" width="375" height="128"/>
+                                    <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="2XI-Fc-C1W" customClass="RouteViewController">
+                                        <rect key="frame" x="0.0" y="56" width="375" height="128"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                     </view>
+                                    <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="zQJ-4A-OLh">
+                                        <rect key="frame" x="128" y="217" width="118" height="30"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <state key="normal" title="Clear"/>
+                                        <connections>
+                                            <action selector="clearRouteScreen:" destination="lbI-YC-dSZ" eventType="touchUpInside" id="y9e-X4-uCg"/>
+                                        </connections>
+                                    </button>
                                 </subviews>
                                 <color key="backgroundColor" name="bodySet"/>
                                 <constraints>
-                                    <constraint firstAttribute="trailing" secondItem="2XI-Fc-C1W" secondAttribute="trailing" id="0tY-qO-sq4"/>
-                                    <constraint firstItem="2XI-Fc-C1W" firstAttribute="leading" secondItem="mkA-rU-lmt" secondAttribute="leading" id="R4W-Yx-byY"/>
-                                    <constraint firstItem="2XI-Fc-C1W" firstAttribute="bottom" secondItem="mkA-rU-lmt" secondAttribute="bottomMargin" id="mNn-bV-d9N"/>
-                                    <constraint firstItem="2XI-Fc-C1W" firstAttribute="top" secondItem="mkA-rU-lmt" secondAttribute="top" constant="151" id="rhR-mO-h71"/>
+                                    <constraint firstItem="ewn-WB-dja" firstAttribute="leading" secondItem="mkA-rU-lmt" secondAttribute="leading" id="4ya-Qq-7xn"/>
+                                    <constraint firstAttribute="trailing" secondItem="ewn-WB-dja" secondAttribute="trailing" id="VXg-n9-OKs"/>
+                                    <constraint firstItem="ewn-WB-dja" firstAttribute="top" secondItem="mkA-rU-lmt" secondAttribute="top" id="lxn-Fn-8pq"/>
                                 </constraints>
                             </view>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="hfW-3b-OoL">
@@ -2260,7 +2268,7 @@
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
-        <segue reference="vOH-gB-ehm"/>
+        <segue reference="vy9-rt-rjN"/>
     </inferredMetricsTieBreakers>
     <resources>
         <image name="airplane.circle" catalog="system" width="128" height="121"/>
