--- a/AviationMeteorology/Views/Base.lproj/Main.storyboard
+++ b/AviationMeteorology/Views/Base.lproj/Main.storyboard
@@ -1106,8 +1106,8 @@
                                                 <nil key="textColor"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
-                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Visibility" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.59999999999999998" translatesAutoresizingMaskIntoConstraints="NO" id="klL-KP-Hlm">
-                                                <rect key="frame" x="274.5" y="65" width="61.5" height="20"/>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Visibility" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.59999999999999998" translatesAutoresizingMaskIntoConstraints="NO" id="klL-KP-Hlm">
+                                                <rect key="frame" x="245" y="65" width="120" height="20"/>
                                                 <fontDescription key="fontDescription" name="Quicksand-Regular" family="Quicksand" pointSize="17"/>
                                                 <nil key="textColor"/>
                                                 <nil key="highlightedColor"/>
@@ -1115,6 +1115,7 @@
                                         </subviews>
                                         <color key="backgroundColor" name="bodySet"/>
                                         <constraints>
+                                            <constraint firstAttribute="trailing" secondItem="klL-KP-Hlm" secondAttribute="trailing" constant="10" id="6S4-Nf-vcp"/>
                                             <constraint firstItem="Nig-8u-yhP" firstAttribute="centerX" secondItem="CDR-5q-Bt5" secondAttribute="centerX" id="7C8-Ua-6Fd"/>
                                             <constraint firstItem="3uv-zX-G0p" firstAttribute="centerX" secondItem="ED2-ge-XNm" secondAttribute="centerX" id="8Qn-NS-Vm8"/>
                                             <constraint firstItem="klL-KP-Hlm" firstAttribute="top" secondItem="BVr-0U-JTc" secondAttribute="bottom" constant="5" id="Xq4-IR-c5B"/>
@@ -2143,9 +2144,9 @@
                                 </variation>
                                 <variation key="heightClass=compact">
                                     <mask key="constraints">
-                                        <exclude reference="mxD-hM-F1T"/>
                                         <exclude reference="IF0-eG-0BD"/>
                                         <include reference="Tr4-xH-H78"/>
+                                        <exclude reference="mxD-hM-F1T"/>
                                     </mask>
                                 </variation>
                             </view>
